--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "first-concept",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://andreioncica.github.io/first-concept",
   "type": "module",
   "scripts": {
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -28,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "file-loader": "^6.2.0",
     "vite": "^5.1.4",
+    "vite-plugin-gh-pages": "^0.4.1",
     "webpack": "^5.90.3"
   }
 }
